fix responsive version mobile

--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@
 
 .header .ul {
   display: flex;
-  flex-flow: row nowrap;
+  flex-flow: row wrap;
   justify-content: flex-end;
   align-items: center;
 }
@@ -190,6 +190,11 @@ ul {
   align-items: center;
 }
 
+.content-1 .img-1 {
+  width: 100%;
+  height: auto;
+}
+
 .content-1 .img-2 {
   display: none;
 }
@@ -199,6 +204,8 @@ ul {
   justify-content: space-between;
   align-items: center;
   padding: 3rem 3rem;
+  width: 100%;
+  height: auto;
 }
 
 .content-1 .h3 {
@@ -234,6 +241,13 @@ ul {
   align-items: center;
 }
 
+.content-2 .img-1,
+.content-2 .img-2 {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
 .content-2 .img-3,
 .content-2 .img-4 {
   display: none;
@@ -246,6 +260,7 @@ ul {
 .content-2 .section-2-1 {
   width: 100%;
   max-width: 578px;
+  height: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -295,6 +310,7 @@ ul {
 .content-2 .section-2-2 {
   width: 100%;
   max-width: 578px;
+  height: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -325,6 +341,11 @@ ul {
   flex-direction: column;
   align-items: center;
   border-bottom: 1px solid #000;
+}
+
+.content-3 .img-1 {
+  width: 100%;
+  height: auto;
 }
 
 .content-3 .img-2 {
@@ -876,6 +897,8 @@ ul {
 
   .content-1 .img-2 {
     display: block;
+    width: 100%;
+    height: auto;
   }
 
   .content-1 .img-1 {
@@ -884,7 +907,7 @@ ul {
 
   .content-1 .article {
     margin: 0;
-    padding: 1.5rem;
+    padding: 1.5rem 0;
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -897,6 +920,7 @@ ul {
     line-height: 29px;
     letter-spacing: 0;
     text-align: left;
+    width: 100%;
     max-width: 388px;
   }
 
@@ -907,6 +931,7 @@ ul {
     line-height: 24px;
     letter-spacing: 0;
     text-align: left;
+    width: 100%;
     max-width: 388px;
     margin: 0;
   }
@@ -930,8 +955,8 @@ ul {
   .content-2 .img-3,
   .content-2 .img-4 {
     display: block;
-    width: 388px;
-    height: 320px;
+    width: 100%;
+    height: auto;
     margin: 0;
   }
 
@@ -1023,11 +1048,16 @@ ul {
 
   .content-3 .img-2 {
     display: block;
+    width: 100%;
+    height: auto;
   }
 
   .play .img-3,
   .play i {
     display: block;
+    width: 100%;
+    max-width: 75px;
+    height: auto;
   }
 
   .play .img-3 {
@@ -1043,6 +1073,8 @@ ul {
     margin-top: -205px;
     padding-bottom: 10rem;
     padding-left: 0.2rem;
+    width: 100%;
+    height: auto;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -1102,8 +1134,7 @@ ul {
 
   .content-4 .img-5 {
     width: 100%;
-    max-width: 428px;
-    max-height: 290px;
+    height: auto;
     display: block;
   }
 
@@ -1136,6 +1167,10 @@ ul {
     text-align: left;
   }
 
+  .Continue {
+    width: 100%;
+  }
+
   .content-4 .vector {
     margin-left: 8rem;
   }
@@ -1158,6 +1193,8 @@ ul {
   .content-4 .img-7,
   .content-4 .img-8 {
     display: block;
+    width: 100%;
+    height: auto;
   }
 
   .content-4 .section-content-4-3 {
@@ -1199,15 +1236,16 @@ ul {
     line-height: 24px;
     letter-spacing: 0;
     text-align: left;
+    color: #c2c2c2;
   }
 
   .content-4 .see-all {
     display: block;
     width: 100%;
     max-width: 388px;
-    height: 56px;
+    min-height: 56px;
     padding: 0;
-    margin: 1.3rem;
+    margin: 1.3rem auto;
     font-family: Inter, sans-serif;
     font-size: 20px;
     font-weight: 500;
@@ -1339,6 +1377,7 @@ ul {
   .footer .h2 {
     width: 100%;
     max-width: 388px;
+    color: #505050;
   }
 
   .social-media-1 {
